[project]
name = "pytest-mysql"
version = "2.3.1"
description = "MySQL process and client fixtures for pytest"
readme = "README.rst"
keywords = ["tests", "pytest", "fixture", "mysql"]
license = {file = "LICENSE"}
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
dependencies = [
    "pytest >= 6.2",
    "port-for >= 0.6.0",
    "mirakuru",
    "mysqlclient",
]
requires-python = ">= 3.7"

[project.urls]
"Source" = "https://github.com/ClearcodeHQ/pytest-mysql"
"Bug Tracker" = "https://github.com/ClearcodeHQ/pytest-mysql/issues"
"Changelog" = "https://github.com/ClearcodeHQ/pytest-mysql/blob/v2.3.1/CHANGES.rst"

[project.entry-points."pytest11"]
pytest_mysql = "pytest_mysql.plugin"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
packages = ["pytest_mysql"]

[tool.pytest.ini_options]
xfail_strict=true
addopts = "--max-worker-restart=0 --showlocals --verbose --cov"
testpaths = "tests"
mysql_dbname = "pytestmysql"

[tool.pydocstyle]
ignore = "D203,D212"

[tool.black]
line-length = 80
target-version = ['py39']
include = '.*\.pyi?$'

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://https://github.com/ClearcodeHQ/pytest-mysql/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneus"
showcontent = true
